# mlip

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  Dockerfile.release  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: index.doctree
.doctrees/installation/: index.doctree
.doctrees/migration_guide/: index.doctree
.doctrees/user_guide/: data_processing.doctree  finetuning.doctree  index.doctree  inference.doctree  models.doctree  simulations.doctree  training.doctree
.github/workflows/: deploy_docs.yaml  publish.yaml  tests_and_linters.yaml
_sources/: index.rst.txt
_sources/api_reference/: index.rst.txt
_sources/installation/: index.rst.txt
_sources/migration_guide/: index.rst.txt
_sources/user_guide/: data_processing.rst.txt  finetuning.rst.txt  index.rst.txt  inference.rst.txt  models.rst.txt  simulations.rst.txt
api_reference/: index.html
api_reference/data/: atomic_number_table.html  batching_helpers.html  chemical_system.html  combined_graph_dataset.html  data_prefetching.html  data_split.html  dataset_builder_config.html  dataset_configs.html  dataset_info.html  graph.html  graph_dataset.html  graph_dataset_builder.html  graph_definition.html  helper_functions.html  index.html  single_graph_dataset_builder.html
api_reference/models/: blocks.html  config.html  conservative_predictor.html  esen.html  force_field.html  hessian_predictor.html  index.html  inference_context.html  io.html  loss.html  mace.html  mlip_network.html  nequip.html  options.html  prediction.html  predictor.html  properties.html  readout.html  visnet.html
api_reference/simulation/: ase_calculator.html  ase_engine.html  ase_sim_config.html  batched_inference.html  enums.html  graph_creation_jaxmd.html  graph_from_atoms.html  index.html  jaxmd_engine.html  jaxmd_sim_config.html  metadynamics_config.html  metadynamics_engine.html  (+7 more)
installation/: index.html
migration_guide/: index.html
tests/: conftest.py
tutorials/: advanced_simulation_tutorial.ipynb  hessian_model_training_tutorial.ipynb  metadynamics_tutorial.ipynb  model_addition_tutorial.ipynb  model_training_tutorial.ipynb  moe_training_and_inference_tutorial.ipynb  simulation_tutorial.ipynb
user_guide/: data_processing.html  finetuning.html  index.html  inference.html  models.html  simulations.html  training.html
(+402 files in other folders)
