[project]
name = "mlip"
version = "0.2.1"
description = "Machine Learning Interatomic Potentials in JAX"
license-files = [
    "LICENSE"
]
authors = [
    {name="InstaDeep", email="placeholder@instadeep.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

requires-python = ">=3.11,<3.14"

dependencies = [
    "numpy >1.26.0,<3",
    "ase >=3.22.1",
    "orbax-checkpoint >=0.11",
    "omegaconf >=2.3.0",
    "dm-haiku >=0.0.14",
    "dm-tree >=0.1.8",
    "e3nn-jax >=0.20.7",
    "flax >=0.9.0",
    "jax >=0.4.32, !=0.9.0", # 0.9.0 yanked for sharding/pmap issues
    "jax-md >=0.2.26",
    "roundmantissa >=0.2.1",
    "matscipy >=1.1.0",
    "pydantic >=2.10.2",
    "h5py >=3.12.1",
    "tqdm >=4.0",
    "tqdm-loggable >=0.2",
    "e3j >=0.1.0b3, <0.1.1",
]

[project.optional-dependencies]
cuda13 = [
    "jax[cuda13] >= 0.8.0",
    "jaxlib >= 0.8.0",
    "e3j_ops >= 0.1.0b3, < 0.1.1"
]
cuda = [
    "mlip[cuda13]"
]
cuda13_local = [
    "jax[cuda13_local] >= 0.8.0",
    "jaxlib >= 0.8.0",
    "e3j_ops >= 0.1.0b3, < 0.1.1"
]
cuda12 = [
    "jax[cuda12] >=0.4.32",
    "jaxlib >=0.4.32",
    "e3j_ops >= 0.1.0b3, < 0.1.1"
]
cuda12_local = [
    "jax[cuda12_local] >=0.4.32",
    "jaxlib >=0.4.32",
    "e3j_ops >= 0.1.0b3, < 0.1.1"
]
tpu = [
    "jax[tpu]>=0.5.2",
    "jaxlib>=0.5.1",
    "libtpu>=0.0.10.1"
]

[dependency-groups]
dev = [
    "pytest >=7.4.0",
    "pytest-cov >=4.1.0",
    "pytest-env >=1.0.0",
    "pre-commit >=4.0.1",
    "sphinx >=8.1.3",
    "furo >=2024.8.6",
    "sphinx-design>=0.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
env = [
    "D:MLIP_BACKWARD_V1_COMPATIBLE=false",
    "D:MLIP_TESTING=true",
    "D:JAX_DEFAULT_MATMUL_PRECISION=highest",
    "D:TF_CPP_MIN_LOG_LEVEL=2",
]

[tool.coverage.report]
include_namespace_packages = true

[project.urls]
"Homepage" = "https://github.com/instadeepai/mlip/"
